--- a/index.html
+++ b/index.html
@@ -31,11 +31,15 @@
 </div>
 
 
-
+<!-- Audio -->
+<audio id="clickSound" preload="auto" loop="loop">
+    <source src="assets/sounds/seinfeld.mp3"></source>
+</audio>
 
 
 
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.1.min.js"></script>
+<script type="text/javascript" src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
 <script type="text/javascript" src="assets/javascript/app.js"></script>
 </body>
 </html>
